--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,7 @@
-    .estilo-lindo {
-        background-color: #2609de; /* Color de fondo verde */
-        color: white; /* Color del texto blanco */
-        padding: 15px 32px; /* Espaciado interno */
-        text-align: center; /* Alineación del texto al centro */
-        text-decoration: none; /* Sin subrayado */
-        display: inline-block; /* Mostrar como bloque en línea */
-        font-size: 16px; /* Tamaño de fuente */
-        margin: 4px 2px; /* Margen alrededor del botón */
-        cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
-        border-radius: 12px; /* Bordes redondeados */
-        transition: background-color 0.3s; /* Transición suave al cambiar el color de fondo */       
-    }
-    .estilo-lindo:hover {
-        background-color: #1a0c9e; /* Color de fondo al pasar el mouse */
-    }
+*{
+    font-family: 'Montserrat', sans-serif; /* Define la fuente principal para todo el documento */
+}
+
+.bg-primary{
+    background-color: #2c3e50 !important; /* Color de fondo primario */
+}
