--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,18 @@
 .bg-primary{
     background-color: #2c3e50 !important; /* Color de fondo primario */
 }
+
+.text-primary{
+    color: #2c3e50 !important; /* Color de texto primario */
+}
+
+.card{
+    transform: 0.3s;
+    background-color: #ecf0f1 !important; /* Color de fondo de las tarjetas */
+    border-radius: 10px; /* Bordes redondeados para las tarjetas */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra sutil para las tarjetas */
+}
+.card:hover{
+    transform: scale(1.02); /* Efecto de zoom al pasar el cursor sobre las tarjetas */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra más pronunciada al hacer hover */
+}
