--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@
     background-color: #2c3e50 !important; /* Color de fondo primario */
 }
 
+img{
+    max-width: 80%; /* Asegura que las imágenes no excedan el ancho de su contenedor */
+    height: auto; /* Mantiene la proporción de las imágenes */
+}
+
 .text-primary{
     color: #2c3e50 !important; /* Color de texto primario */
 }
@@ -20,3 +25,4 @@
     transform: scale(1.02); /* Efecto de zoom al pasar el cursor sobre las tarjetas */
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra más pronunciada al hacer hover */
 }
+
