--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
     background-color: #2c3e50 !important; /* Color de fondo primario */
 }
 
-img{
-    max-width: 80%; /* Asegura que las imágenes no excedan el ancho de su contenedor */
+.imgRes{
+    max-width: 50%; /* Asegura que las imágenes no excedan el ancho de su contenedor */
     height: auto; /* Mantiene la proporción de las imágenes */
 }
 
